# PonOS

./: .clang-format  .clangd  .gdbinit  .lldbinit  Build.hs  Makefile  README.md  bs  build.cabal  build.zig  build_image.sh  link.ld  payload
.cargo/: config.toml
buildsystem/: Build.hs  Clang.hs  Config.hs  File.hs  Image.hs  Kernel.hs  KernelElf.hs  Loader.hs  Main.hs  NASM.hs  Stdlib.hs  Target.hs  UserspaceProgram.hs  Utils.hs
kernel/: hardwareIo.c  interrupts.c  interrupts.nasm  link.ld  loader.nasm  main.c  paging.c  paging.h  paging.nasm  panic.c  types.h  userspace.c  userspace.h  utils.h  utils.nasm
src/: alloc.c  alloc.h  asmUtils.h  assert.h  hardwareIo.c  interrupts.c  interrupts.h  loader.nasm  main.c  main.nasm  main.zig  mem.c  mem.h  paging.c  paging.h  paging.nasm  panic.c  panic.h  portIo.c  portIo.h  string.c  string.h  syscalls.c  syscalls.h  syscalls.nasm  userspace.c  userspace.h  utils.c  utils.h  utils.nasm  vga.c  vga.h
userspace/: counter.c  factorial.c  fibonacci.c  finite.c  lib.c  lib.h  lib.nasm  link.ld  startup.nasm
