cabal-version:      3.0
name:               build
version:            0.0.1
build-type:         Simple

common warnings
    ghc-options: -Wall -Wextra

executable main
    import: warnings
    main-is: Build.hs
    other-modules:
    build-depends: base, extra, process, filepath, directory, time
    default-language: Haskell2010

