cabal-version:      3.0
name:               build
version:            0.0.1
build-type:         Simple

common warnings
    ghc-options: -Wall -Wextra

executable main
    import: warnings
    main-is: Main.hs
    other-modules: Config,
                   Utils,
                   Target,
                   Clang,
                   File,
                   NASM,
                   Stdlib,
                   Loader,
                   KernelElf,
                   UserspaceProgram,
                   Image,
                   Build,
    build-depends: base,
                   extra,
                   process,
                   filepath,
                   directory,
                   time,
                   optparse-applicative,
                   mtl,
                   megaparsec
    hs-source-dirs: buildsystem
    default-language: Haskell2010

